[tool.poetry]
name = "llama2-chat"
version = "0.1.0"
description = ""
authors = ["hsteude <henrik.steude@gmail.com>"]
packages = [{include = "llama2_chat"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
transformers = "^4.33.3"
torch = ">=2.0.0, !=2.0.1"
accelerate = "^0.23.0"
datasets = "^2.14.5"
huggingface-hub = "^0.17.3"
loguru = "^0.7.2"
kserve = "^0.11.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
ipdb = "^0.13.13"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
